# wnm_sharepoint_client

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  example_config.json  pyproject.toml  scratch.ipynb
.github/workflows/: ci.yml
tests/: test_client.py  test_token.py
wnm_sharepoint_client/: __inti__.py  auth.py  client.py  config.py  logger.py
