[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wnm-sharepoint-client"
version = "0.1.0"
description = "Client for interacting with SharePoint via Microsoft Graph API."
authors = [
    { name = "Matt Mallory", email = "matt.mallory@alleninstitute.org" }
]
dependencies = [
    "pandas",
    "requests",
    "openpyxl",
    "pytest",
    "dotenv",   
    "black",
    "flake8",
    "isort"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "isort", "flake8", "autoflake", "pre-commit"]


[tool.setuptools.packages.find]
where = ["."]  

[tool.setuptools.package-data]
"wnm_sharepoint_client" = ["*"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]  # or be more specific like ["E", "F", "I"] if you want less strictness
ignore = ["D", "ANN"]  # optionally ignore docstring or type hinting rules

[tool.ruff.format]
quote-style = "double"  # or "single" if you prefer


[project.urls]
Homepage = "https://github.com/AllenInstitute/wnm_sharepoint_client"

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]
